frontend: Changed no clue meeting message

--- a/frontend/locales/es/admin.json
+++ b/frontend/locales/es/admin.json
@@ -2,8 +2,7 @@
   "Game": "Juego",
   "Vision distance (m)": "Distancia de visión (m)",
   "vision distance": "distancia de visión",
-  "interact distance": "distancia de conexión",
-  "Challenges": "Retos",
   "Interact distance (m)": "Distancia de conexión (m)",
-  "test": "prueba"
+  "interact distance": "distancia de conexión",
+  "Challenges": "Retos"
 }
