--- a/frontend/locales/es/connect.json
+++ b/frontend/locales/es/connect.json
@@ -1,6 +1,6 @@
 {
+  "I've nothing to say": "No tengo nada que decir",
   "Too far!": "Demasiado lejos!",
   "too far, get near": "demasiado lejos, acercate",
-  "Interact": "Conectar",
-  "Connected!": "Conectado!"
+  "Interact": "Conectar"
 }
