--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -1,8 +1,10 @@
 {
   "Event": "Evento",
   "Conglatulations!": "Felicidades!",
+  "Wrong answer. Try again": "Respuesta incorrecta. Prueba otra vez",
   "Solve": "Resolver",
   "Go!": "Adelante!",
+  "Loading...": "Cargando...",
   "The solution!": "La solución!",
   "go to find someone": "ve a buscar a alguien",
   "Play": "Jugar",
@@ -10,12 +12,9 @@
   "Join": "Unirse",
   "Admin": "Administrar",
   "Events": "Eventos",
-  "There's no events ": "No hay eventos",
+  "There's no events :(": "No hay eventos :(",
   "Load More": "Ver más",
   "search": "buscar",
   "All": "Todos",
-  "Mine": "Míos",
-  "Wrong answer. Try again": "Respuesta incorrecta. Prueba otra vez",
-  "Loading...": "Cargando...",
-  "There's no events :(": "No hay eventos :("
+  "Mine": "Míos"
 }
