frontend: Fixed interface with translations

--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -6,6 +6,8 @@
   "Go!": "Adelante!",
   "Loading...": "Cargando...",
   "The solution!": "La solución!",
+  "Clues": "",
+  "No Clues yet": "",
   "go to find someone": "ve a buscar a alguien",
   "Play": "Jugar",
   "Leave": "Abandonar",
