--- a/frontend/locales/es/common.json
+++ b/frontend/locales/es/common.json
@@ -1,6 +1,6 @@
 {
-  "Saved!": "Guardado!",
+  "Loading...": "Cargando...",
   "Save": "Guardar",
-  "Unknown error": "Error desconocido",
-  "Loading...": "Cargando..."
+  "Saved!": "Guardado!",
+  "Unknown error": "Error desconocido"
 }
