--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -1,22 +1,22 @@
 {
-  "Event": "Evento",
-  "Conglatulations!": "Felicidades!",
-  "Wrong answer. Try again": "Respuesta incorrecta. Prueba otra vez",
-  "Solve": "Resolver",
-  "Go!": "Adelante!",
-  "Loading...": "Cargando...",
-  "The solution!": "La solución!",
-  "Clues": "",
-  "No Clues yet": "",
-  "go to find someone": "ve a buscar a alguien",
-  "Play": "Jugar",
-  "Leave": "Abandonar",
-  "Join": "Unirse",
   "Admin": "Administrar",
-  "Events": "Eventos",
-  "There's no events :(": "No hay eventos :(",
-  "Load More": "Ver más",
-  "search": "buscar",
   "All": "Todos",
-  "Mine": "Míos"
+  "Clues": "",
+  "Conglatulations!": "Felicidades!",
+  "Event": "Evento",
+  "Events": "Eventos",
+  "Go!": "Adelante!",
+  "Join": "Unirse",
+  "Leave": "Abandonar",
+  "Load More": "Ver más",
+  "Loading...": "Cargando...",
+  "Mine": "Míos",
+  "No Clues yet": "",
+  "Play": "Jugar",
+  "Solve": "Resolver",
+  "The solution!": "La solución!",
+  "There's no events :(": "No hay eventos :(",
+  "Wrong answer. Try again": "Respuesta incorrecta. Prueba otra vez",
+  "go to find someone": "ve a buscar a alguien",
+  "search": "buscar"
 }
