--- a/frontend/locales/es/profile.json
+++ b/frontend/locales/es/profile.json
@@ -1,15 +1,15 @@
 {
-  "Profile": "Perfil",
-  "Password doesn't match, try again": "La contraseña no concuerda, prueba otra vez",
-  "Done!": "Hecho!",
   "About you": "Acerca de ti",
-  "about you": "acerca de ti",
-  "Interests": "Intereses",
-  "interests": "intereses",
-  "Change password": "Cambiar contraseña",
-  "current": "actual",
-  "new": "nuevo",
-  "repeat": "repetir",
   "Change": "Cambiar",
-  "Save": "Guardar"
+  "Change password": "Cambiar contraseña",
+  "Done!": "Hecho!",
+  "Interests": "Intereses",
+  "Password doesn't match, try again": "La contraseña no concuerda, prueba otra vez",
+  "Profile": "Perfil",
+  "Save": "Guardar",
+  "about you": "acerca de ti",
+  "current": "actual",
+  "interests": "intereses",
+  "new": "nuevo",
+  "repeat": "repetir"
 }
