frontend: Showing multiples clues after connection

--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -1,7 +1,7 @@
 {
   "Admin": "Administrar",
   "All": "Todos",
-  "Clues": "",
+  "Clues": "Pistas",
   "Conglatulations!": "Felicidades!",
   "Event": "Evento",
   "Events": "Eventos",
@@ -9,9 +9,8 @@
   "Join": "Unirse",
   "Leave": "Abandonar",
   "Load More": "Ver más",
-  "Loading...": "Cargando...",
   "Mine": "Míos",
-  "No Clues yet": "",
+  "No Clues yet": "Aún no tienes pistas",
   "Play": "Jugar",
   "Solve": "Resolver",
   "The solution!": "La solución!",
