--- a/frontend/locales/es/profile.json
+++ b/frontend/locales/es/profile.json
@@ -2,9 +2,10 @@
   "About you": "Acerca de ti",
   "Change": "Cambiar",
   "Change password": "Cambiar contraseña",
-  "Done!": "Hecho!",
+  "Error changing the password, try again": "Error cambiando la contraseña, prueba de nuevo",
   "Interests": "Intereses",
-  "Password doesn't match, try again": "La contraseña no concuerda, prueba otra vez",
+  "Password changed correctly": "Contraseña cambiada correctamente",
+  "Passwords didn't match": "Las contraseñas no coinciden",
   "Profile": "Perfil",
   "Save": "Guardar",
   "about you": "acerca de ti",
