frontned: Using alertify for alerts

--- a/frontend/locales/es/login.json
+++ b/frontend/locales/es/login.json
@@ -1,5 +1,6 @@
 {
   "Check your email and confirm your account": "Mira tu email y confirma tu cuenta",
+  "Invalid credentials, try again": "Credenciales no válidas, prueba otra vez",
   "Invalid or used email": "Email inválido o no disponible",
   "Login": "Iniciar sesión",
   "Login using Facebook or Google": "Login usando Facebook o Google",
