frontend: Showing confirmation prompt on event leave

--- a/frontend/locales/es/common.json
+++ b/frontend/locales/es/common.json
@@ -1,5 +1,7 @@
 {
+  "Cancel": "Cancelar",
   "Loading...": "Cargando...",
+  "Ok": "Vale",
   "Save": "Guardar",
   "Saved!": "Guardado!",
   "Unknown error": "Error desconocido"
