--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -16,6 +16,7 @@
   "The solution!": "La solución!",
   "There's no events :(": "No hay eventos :(",
   "Wrong answer. Try again": "Respuesta incorrecta. Prueba otra vez",
+  "You'll lost all your clues in this event. Are you sure?": "Perderás todas tus pistas en este evento. ¿Estás seguro?",
   "go to find someone": "ve a buscar a alguien",
   "search": "buscar"
 }
