frontend: Added map button when playing to improve the usability

--- a/frontend/locales/es/events.json
+++ b/frontend/locales/es/events.json
@@ -9,6 +9,7 @@
   "Join": "Unirse",
   "Leave": "Abandonar",
   "Load More": "Ver más",
+  "Map": "Mapa",
   "Mine": "Míos",
   "No Clues yet": "Aún no tienes pistas",
   "Play": "Jugar",
