--- a/frontend/locales/es/map.json
+++ b/frontend/locales/es/map.json
@@ -1,4 +1,5 @@
 {
+  "Clues": "Pistas",
   "Error joining the game": "Error uniendose al juego",
   "Error leaving the game": "Error abandonando el juego",
   "Error starting the game": "Error empezando el juego",
