Login activity with social buttons and email buttons that show/hide signup form.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">socializa</string>
+    <string name="login">Login</string>
+    <string name="login_with">Login with:</string>
+    <string name="facebook">f</string>
+    <string name="google">G+</string>
+    <string name="email">email</string>
+    <string name="hint_mail">me@socializa.com</string>
+    <string name="hint_pwd">password</string>
 </resources>
