Added service and client for http petitions (login and register form are working). Added registerActivity

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="app_name">socializa</string>
     <string name="login">Login</string>
+    <string name="register">Register</string>
     <string name="login_with">Login with:</string>
     <string name="facebook">f</string>
     <string name="google">G+</string>
     <string name="email">email</string>
     <string name="hint_mail">me@socializa.com</string>
     <string name="hint_pwd">password</string>
+    <string name="hint_pwd2">repeat password</string>
+    <string name="wrong_mail">invalid mail</string>
+    <string name="wrong_password">password not match</string>
 </resources>
